syntax = "proto3";

option java_multiple_files = true;
option java_package = "msw.server.core.common";
option java_outer_classname = "MemoryAmountProto";

package msw.server.core.watcher;

import "msw/server/core/watcher/MemoryUnit.proto";

message MemoryAmount {
  int64 amount = 1;
  MemoryUnit unit = 2;
}