syntax = "proto3";

option java_multiple_files = true;
option java_package = "msw.server.rpc.versions";
option java_outer_classname = "VersionDetailsProto";

package msw.server.rpc.versions;

import "google/protobuf/timestamp.proto";
import "msw/server/rpc/versions/VersionLabel.proto";

message VersionDetails {
  string versionID = 1;
  VersionLabel label = 2;
  google.protobuf.Timestamp time = 3;
  google.protobuf.Timestamp releaseTime = 4;
  int64 size = 5;
  string sha1 = 6;
}
